# CS377_Team1_Concentration-vs.-Dispersion-in-Free-Setup-Chess-via-AlphaZero

./: .gitignore  .venv  CLUSTER_RUNBOOK.md  CS377_Implementation_Plan_v2.md  CS377_Patch_Plan.md  CS377_Project_Summary.md  CS377_Remediation_Plan.md  README.md  Server_Handoff.md  full_analysis_output.txt  lc0  print_deltas.py  pyproject.toml  requirements.txt  scratch_test_arena.py
Submit_Codes/: 01_environment_and_handicap_setup.ipynb  02_alphazero_track_a.ipynb  03_lc0_track_b.ipynb  04_analysis_and_figures.ipynb  README.md
handichess/: __init__.py
prompt_md/: CS377_Design_B_Migration_Plan.md
runs/: arena_extra_commands.sh  arena_main.jsonl  arena_timing_smoke.jsonl  floor_pilot.jsonl  lc0_main.jsonl  lc0_smoke.jsonl
scratch/: benchmark.py  patch_fig2.py  play_vs_stockfish.py  smoke_test_arena.py  smoke_track_a.py  smoke_track_b.py  test_random.py  test_trained_model.py  test_trained_model_pgn.py  track_a_log.jsonl
scripts/: analyze.py  detailed_analysis.py  eval_track_a.py  evaluate_elo.py  full_analysis.py  gen_positions.py  generate_boards.py  generate_fig2_new.py  generate_figures.py  generate_heatmap_asymmetry.py  generate_heatmap_pieces.py  plan_extra_evals.py  run_4gpu_cluster.sh  run_all_experiments.sh  run_arena.py  run_arena_main_4gpu.sh  run_chess_sanity.py  run_floor_pilot.py  run_lc0.py  run_lc0_main_4way.sh  run_lc0_pilot_4way.sh  run_track_b_elo_only.sh  run_track_b_stochastic_only.sh  simulate_extreme_floor.py  train.py
tests/: test_analysis.py  test_chess.py  test_chess_gate.py  test_encoding.py  test_handicap.py  test_matchup.py  (+2 more)
(+52 files in other folders)
